Fixed Spyscroll on Firefox and Safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Maven Pro";
+    position: relative;
 }
 ::-webkit-scrollbar {
     width: 5px;
